# Triangles

./: .gitignore  CMakeLists.txt
Source/: main.cpp
Source/Geometry/: dot.cpp  dot.hpp  polygon.cpp  polygon.hpp  segment.cpp  segment.hpp
src/: dot.cpp  dot.hpp  main.cpp  polygon.cpp  polygon.hpp  segment.cpp  segment.hpp
